# vistiq

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  environment-gpu.yml  environment.yml  pyproject.toml  tox.ini  write_version_info.py
dag_vis/: dag_visualization.py  prefect_dag_mock.py
examples/: coincidence.py
notebooks/: test-config.ipynb  vistiq-watershed.ipynb
scripts/: analyze.sbatch  analyze.sh  entrypoint.sh  filelist.sh  preprocess.sbatch  rename.sh  segment.sbatch  train.sbatch
src/vistiq/: __init__.py  analysis.py  app.py  cli.py  core.py  io.py  napari_utils.py  preprocess.py  seg.py  train.py  utils.py  workflow.py  workflow_builder.py
src/vistiq/segment/: __init__.py  _debug.py  analysis.py  label.py  postprocess.py  select.py  threshold.py
tests/: README.md  __init__.py  conftest.py  test_analysis.py  test_app.py  test_core.py  test_label_alignment.py  test_preprocess.py  test_seg.py  test_utils.py  test_workflow.py  test_workflow_builder.py
