[project]
name = "vistiq"
dynamic = ["version"]
dependencies = [
    "numpy",
    "opencv-python-headless",
    "pydantic",
    "scikit-image",
    "scipy",
    "torch>=2.7",
    "torchvision",
    "trackastra<0.4",
    "tifffile",
    "prefect>=3.0.0",
    "bioio>=3.0.0",
    "bioio-ome-tiff>=1.4.0",
]
requires-python = ">=3.12"
description = "Turn complex imaging data into actionable, quantitative insight with modular, multi-step analysis."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.optional-dependencies]
napari = ["vistiq-napari"]

[project.scripts]
vistiq = "vistiq.app:main"

[project.gui-scripts]
vistiq = "vistiq.app:main"

[project.urls]
Homepage = "https://github.com/ksiller/vistiq"
Issues = "https://github.com/ksiller/vistiq/issues"

[build-system]
requires = [
    "hatchling",
    "versioningit",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.vcs]
match = ["[0-9]*.[0-9]*.[0-9]*", "[0-9]*.[0-9]*.[0-9]*.dev[0-9]*"]
default-tag = "0.0.0"

[tool.versioningit.next-version]
method = "smallest-release"

[tool.versioningit.write]
method = { module = "write_version_info", value = "write_version_info"}
path = "src/vistiq/_version.py"

[tool.versioningit.format]
distance = "{base_version}.post{distance}+{vcs}{rev}"
dirty = "{base_version}+d{build_date:%Y%m%d}"
distance-dirty = "{base_version}.post{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"

[tool.hatch.build.targets.sdist]
include = ["/src/vistiq", "/README.md", "/LICENSE", "/pyproject.toml"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=vistiq",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/vistiq"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]


